--- a/roshambo/RPS.html
+++ b/roshambo/RPS.html
@@ -12,6 +12,7 @@ Revision no. 2.1
             body {text-align: center;}
             p {font-size: 24px;}
             button {font-size: 18px; margin: 5px;}
+            .hideatfirst {display: none;}
         </style>
     </head>
     <body>
@@ -19,11 +20,11 @@ Revision no. 2.1
             <img src="rpshand.JPG" alt="Rock Paper Scissors" onmouseover="changeTopImage()" />
         </header>
         <div>
-            <h1>Let's play Rock, Paper, Scissors!</h1>
-            <p id="newtext">Pick from the buttons below:</p>
+            <h1 class="hideatfirst">Let's play Rock, Paper, Scissors!</h1>
+            <p class="hideatfirst" id="newtext">Pick from the buttons below:</p>
             <button id="rock">Rock</button>
             <button id="paper">Paper</button>
-            <button id="scissors">Scissors</button><br><br>
+            <button id="scissors">Scissors</button><br class="brmove"><br class="brmove">
             <button id="winner">End Game</button>
             <p id="finalwinner"></p>
         </div>
@@ -31,7 +32,12 @@ Revision no. 2.1
             <img src="rpshand.JPG" alt="Rock Paper Scissors" onmouseover="changeLowImage()" />
         </footer>
     </body>
+    <script src="jquery.js"></script>
     <script>
+        // Added jQuery
+        $(document).ready(function() {
+            $(".hideatfirst").fadeIn(1000); // Fade in text
+        });
         let totalCompWins = 0;
         let totalUserWins = 0;
 
@@ -58,7 +64,7 @@ Revision no. 2.1
             let gameStatus = "";
 
             // Displays user choice and computer choice (variable)
-            gameStatus += `User chose rock and computer chose ${compChoice}.`; 
+            gameStatus = `User chose rock and computer chose ${compChoice}.`; 
 
             // If/Else checks for the winner
             if (compChoice === "rock"){
@@ -86,7 +92,7 @@ Revision no. 2.1
             let compChoice = getCompChoice();
             let gameStatus = "";
 
-            gameStatus += `User chose paper and computer chose ${compChoice}.`; 
+            gameStatus = `User chose paper and computer chose ${compChoice}.`; 
 
             if (compChoice === "rock"){
                 gameStatus += "<br>You win! Paper covers rock";
@@ -110,7 +116,7 @@ Revision no. 2.1
             let compChoice = getCompChoice();
             let gameStatus = "";
 
-            gameStatus += `User chose scissors and computer chose ${compChoice}.`; 
+            gameStatus = `User chose scissors and computer chose ${compChoice}.`; 
 
             if (compChoice === "rock"){
                 gameStatus += "<br>You lose! Rock crushes scissors.";
@@ -140,6 +146,11 @@ Revision no. 2.1
             else {
                 document.getElementById("finalwinner").innerHTML = "There was no winner of the Rock, Paper, Scissors tournament...";
             }
+            // More jQuery, hides all buttons, last game result
+            $("button, #newtext").fadeOut(1000);
+            // Adds a new button below to refresh page
+            $("<button onClick=\"location.reload();\">Start Over!</button>").insertAfter("#finalwinner");
+            $(".brmove").remove(); // Originally removed all <br>, now only removing those with class="remove"
         });
 
         const zehead = document.getElementById("zeheader");
