Worked on Sass stylesheet

--- a/fanpage/index.html
+++ b/fanpage/index.html
@@ -1,8 +1,8 @@
 <!--********************************************************************************************
 Author: Madison Federin-Easley
 CSE-41207 Introduction to HTML and CSS
-Date: 2/16/2021
-Revision no. 3.1 (JSON added from Introduction to JavaScript)
+Date: 7/14/2021
+Revision no. 4.0 (JSON added from Introduction to JavaScript)
 *********************************************************************************************-->
 <!DOCTYPE html>
 <html lang="en">
@@ -10,10 +10,10 @@ Revision no. 3.1 (JSON added from Introduction to JavaScript)
         <title>Create A Fan Page</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!--<link href="fanpage_style.css" type="text/css" rel="stylesheet" />-->
+        <link href="fanpage_style.css" type="text/css" rel="stylesheet" />
 
-        <link href="fanpage_style_less.less" type="text/css" rel="stylesheet/less" />
-        <script src="https://cdn.jsdelivr.net/npm/less@3.13"></script>
+        <!--<link href="fanpage_style_less.less" type="text/css" rel="stylesheet/less" />
+        <script src="https://cdn.jsdelivr.net/npm/less@3.13"></script>-->
 
         <!--[if lt IE 9]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -57,9 +57,13 @@ Revision no. 3.1 (JSON added from Introduction to JavaScript)
             <h3>Use JSON to add whatever photos you choose!</h3>
             <p id="errormessage"></p>
             <span id="first"></span>
+            <span id="firstpic"><img src="https://picsum.photos/600?random=1" title="et qui rerum"></span>
             <span id="second"></span>
+            <span id="secondpic"><img src="https://picsum.photos/600?random=2" title="accusamus beatae ad facilis cum similique qui sunt"></span>
             <span id="third"></span>
+            <span id="thirdpic"><img src="https://picsum.photos/600?random=3" title="officia porro iure quia iusto qui ipsa ut modi"></span>
             <span id="fourth"></span>
+            <span id="fourthpic"><img src="https://picsum.photos/600?random=4" title="dolore esse a in eos sed"></span>
         </div>
         <!--***************************************************************************************
         Beginning of footer
