Added updated index.html

--- a/fanpage/index.html
+++ b/fanpage/index.html
@@ -10,7 +10,7 @@ Revision no. 4.0 (JSON added from Introduction to JavaScript)
         <title>Create A Fan Page</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="fanpage_style.css" type="text/css" rel="stylesheet" />
+        <link href="fanpage_csass.css" type="text/css" rel="stylesheet" />
 
         <!--<link href="fanpage_style_less.less" type="text/css" rel="stylesheet/less" />
         <script src="https://cdn.jsdelivr.net/npm/less@3.13"></script>-->
